Oauth google sign-in enabled

--- a/homework_manager/templates/base.html
+++ b/homework_manager/templates/base.html
@@ -130,7 +130,7 @@
                       aria-haspopup="true"
                       aria-expanded="false"
                     >
-                      <i class='fas'>&#xf007;</i> {{request.user.first_name}}
+                      <i class='fas'>&#xf007;</i> {{request.user.first_name}} {{ request.user.last_name }}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="/profile/edit">Edit Profile</a>
