--- a/pages/templates/pages/typeOfUser.html
+++ b/pages/templates/pages/typeOfUser.html
@@ -25,7 +25,7 @@
   <div class="col-sm-6">
     <div class="card card-3" style = "width: 550px">
         <h5 class="card-header">Teacher</h5>
-      <a href = "new/teacher"><div class="card-body">
+      <a href = "/new/teacher"><div class="card-body">
         <image src = "/static/images/teacher.jpg" style = "width: 500px; height: 500px"></image>
       </div></a>
     </div>
