Update login and register google buttons.

--- a/homework_manager/templates/register.html
+++ b/homework_manager/templates/register.html
@@ -44,7 +44,7 @@
         <span class="login100-form-title p-b-43"> Sign up </span>
 
         <div class="container-login100-form-btn">
-          <a title = "Sign up with Google" href="{% provider_login_url 'google' %}" class="btn btn-light btn-block"><img style="height: 40px;" src = "/static/images/google-icon.svg"></a>
+            <a title = "Log in with Google" href="{% provider_login_url 'google' %}" class="btn btn-light btn-block" style="border-color: #0b0b0b;"><img style="height: 40px;" align="left" src = "/static/images/google-icon.svg"><center style="margin-top: 10px;margin-right: 20px">Sign up with Google</center></a>
         </div><hr>
 
         {% if message %}
