--- a/classes/templates/classes/student/view.html
+++ b/classes/templates/classes/student/view.html
@@ -11,7 +11,7 @@
                 <center>
                     <h1>{{class.name}}</h1>
                     <h3 style = 'color: white;'>(Class Code: {{class.code}})</h3>
-                    <h4 style = 'color: white;'>Taught By: {{class.teacher.first_name}}</h4>
+                    <h4 style = 'color: white;'>Taught By: {{class.teacher.first_name}} {{class.teacher.last_name}}</h4>
                     <p style = 'color: white;'>{{ class.description }}</p><br><br><br>
                     <h1>Assignments <span class="badge badge-secondary">{{assignmentsA}}</span></h1>
                 </center>
