--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -81,7 +81,7 @@
                 <h5 style = "color:white;">This is the Homework Manager. A new type of tool for classrooms. It helps classrooms keep track of all types of things including homework and announcements.
                 The Homework Manager features a Teacher Portal and a Student Portal. The Teacher Portal allows teachers to create and setup classes for their students. It also allows teachers to assign assignments
                  and view their status. In the student Portal students can view their assignments and can even create their own non-school related assignments. In addition, Students will be able to update the status
-                their assignments.</h5>
+                their assignments. <b> Privacy Policy: </b>The Homework Manager will not distribute any of it's users data nor diclose it for monetary purposes.</h5>
               </div>
             </div>
           </div>
